src/test/ui/feature-gates/feature-gate-cfg_version.rs
#[cfg(version(1.27)] //~^ ERROR: currently unstable
fn main() {}
